--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mcp-framework",
+  "name": "@d4l/mcp-framework",
   "version": "0.2.15",
   "description": "Framework for building Model Context Protocol (MCP) servers in Typescript",
   "type": "module",
@@ -26,7 +26,7 @@
     "lint:fix": "eslint --fix",
     "format": "prettier --write \"src/**/*.ts\"",
     "prepare": "npm run build",
-    "dev:pub": "rm -rf dist && npm run build && yalc publish --push",
+    "dev:pub": "rm -rf dist && npm run build && npm publish --push",
     "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
     "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
     "test:coverage": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage"
